Ajout widget commandes au dashboard

--- a/index.html
+++ b/index.html
@@ -138,6 +138,23 @@
                 <i class="ri-search-line icon search__btn"></i>
               </div>
 
+              <div class="center">
+                <div class="search__content_desktop">
+                  <i class="ri-close-line btn close-btn" title="GO"></i>
+                  <form>
+                    <input
+                      type="text"
+                      name="search"
+                      class="search__input"
+                      placeholder="Recherche"
+                      id="search__input"
+                      autofocus
+                    />
+                    <!-- <i class="ri-search-line btn" title="GO"></i> -->
+                  </form>
+                </div>
+              </div>
+
               <div class="right">
                 <a href="#" class="commandes__button">
                   <span>
@@ -439,6 +456,9 @@
       <!-- Scripts -->
       <script src="./assets/js/script.js"></script>
       <script src="./assets/js/drag_drop.js"></script>
+
+      <!-- CDN CHART JS -->
+      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>  
       <script src="node_modules/chart.js/dist/chart.umd.js"></script>
 
       <script>
