Intégration  page parametres générales

--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 label: "# Revenus en milliers d'euro",
                 data: [12, 19, 3, 5, 2, 3, 8, 4, 8, 12, 10, 5],
                 borderWidth: 1,
-                backgroundColor: "#011a28",
+                backgroundColor: "#0f3e58",
               },
             ],
           },
@@ -552,7 +552,7 @@
                 label: "# Revenus en milliers d'euro",
                 data: [12, 19, 3, 5, 2, 3, 8, 4, 8, 12, 10, 5],
                 borderWidth: 1,
-                backgroundColor: "#011a28",
+                backgroundColor: "#0f3e58",
               },
             ],
           },
