Intégration  page parametres

--- a/pages/parametres/generales.html
+++ b/pages/parametres/generales.html
@@ -68,7 +68,7 @@
               </li>
 
               <li class="menu__item active">
-                <a href="./pages/parametres/index.html">
+                <a href="./index.html">
                   <i class="ri-list-settings-line"></i>
                   <h6>Paramètres</h6>
                   <!-- <i class="ri-arrow-right-s-line"></i>
