--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </li>
 
               <li class="menu__item">
-                <a href="#">
+                <a href="./pages/administrations/index.html">
                   <i class="ri-user-settings-line"></i>
                   <h6>Administrations</h6>
                 </a>
