Intégration  page administrations sytemes

--- a/pages/administrations/index.html
+++ b/pages/administrations/index.html
@@ -203,7 +203,7 @@
                 </div>
                 
                 <div class="card__item">
-                  <a href="./email.html">
+                  <a href="./users.html">
                     <i class="ri-user-2-fill icon-large"></i>
                     <h6>Utilisateurs</h6>
                     <p>Gérer les comptes utilisateurs</p>
@@ -211,9 +211,9 @@
                 </div> 
                 
                 <div class="card__item">
-                  <a href="./media.html">
+                  <a href="./systems.html">
                     <i class="ri-boxing-fill icon-large"></i>
-                    <h6>Systeme</h6>
+                    <h6>Systèmes</h6>
                     <p>Gérer les informations du système</p>
                   </a>
                 </div>
