--- a/pages/parametres/generales.html
+++ b/pages/parametres/generales.html
@@ -174,7 +174,7 @@
             <nav>
               <ul>
                 <li>
-                  <a href="#">
+                  <a href="./index.html">
                     Paramètres > 
                   </a>
                 </li>
@@ -263,7 +263,8 @@
                         <option value="">Black</option>
                         <option value="">Blanc</option>
                       </select>
-                    </div>    <div class="input-group">
+                    </div>    
+                    <div class="input-group">
                       <label for="langue">Site web theme</label>
                       <select id="langue">
                         <option value="">Theme 1</option>
@@ -278,7 +279,6 @@
                         <option value="">Layout 2</option>
                       </select>
                     </div>
-
 
                     <div class="btn__submit">
                       <button class="btn bg-primary" type="submit">Sauvegarder</button>
