--- a/pages/parametres/index.html
+++ b/pages/parametres/index.html
@@ -180,7 +180,7 @@
                 </li>
                 <li>
                   
-                  <a href="../../index.html">
+                  <a href="#">
                   Paramètres
                   </a>
 
