--- a/pages/parametres/media.html
+++ b/pages/parametres/media.html
@@ -177,7 +177,7 @@
             <nav>
               <ul>
                 <li>
-                  <a href="#">
+                  <a href="./index.html">
                     Paramètres > 
                   </a>
                 </li>
