--- a/pages/parametres/sociallogin.html
+++ b/pages/parametres/sociallogin.html
@@ -174,7 +174,7 @@
             <nav>
               <ul>
                 <li>
-                  <a href="#">
+                  <a href="./index.html">
                     Paramètres > 
                   </a>
                 </li>
