Intégration  page ecommerce

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                 <a href="./pages/parametres/index.html">
                   <i class="ri-list-settings-line"></i>
                   <h6>Paramètres</h6>
-                  <!-- <i class="ri-arrow-right-s-line"></i>
-                  <i class="ri-arrow-down-s-line"></i> -->
+                 
                 </a>
               </li>
 
@@ -82,6 +81,14 @@
                   <h6>Administrations</h6>
                 </a>
               </li>
+              
+              <li class="menu__item">
+                <a href="./pages/ecommerce/index.html">
+                  <i class="ri-store-line"></i>
+                  <h6>Ecommerce</h6>
+                </a>
+              </li>
+
             </ul>
           </div>
 
