--- a/pages/ecommerce/index.html
+++ b/pages/ecommerce/index.html
@@ -195,10 +195,10 @@
             <div class="container">
               <div class="wrapper">
                 <div class="card__item">
-                  <a href="./roles.html">
+                  <a href="./parametres.html">
                     <i class="ri-key-2-fill icon-large"></i>
-                    <h6>Rôles</h6>
-                    <p>Gérer les permissions des utilisateurs</p>
+                    <h6>Paramètres</h6>
+                    <p>Gérer les paramètres </p>
                   </a>
                 </div>
                 
