--- a/pages/ecommerce/reviews.html
+++ b/pages/ecommerce/reviews.html
@@ -223,7 +223,7 @@
                   </div>
                       
                          
-                  <table class="table__list">
+                  <table id="responsive__table">
                       <thead>
                           <tr>
                               <th> <input type="checkbox" name="" id=""> </th>
@@ -234,7 +234,7 @@
                               <th>Commentaire</th>
                               <th>Status</th>
                               <th>Créé le</th>
-                              <th class="hide">Opérations</th>
+                              <th class="">Opérations</th>
                           </tr>
                       </thead>
                       <tbody>
